# data-version-control

./: pyproject.toml
.dvc/: config
data/prepared/: test.csv.dvc  train.csv.dvc
model/: model.joblib.dvc
